--- a/chat.html
+++ b/chat.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/8595/8595483.png">
@@ -31,19 +31,7 @@
     </div>
 
 <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const messageInput = document.getElementById("messageInput");
-        if (messageInput) {
-            messageInput.addEventListener("keypress", function(event) {
-                if (event.key === "Enter") {
-                    event.preventDefault(); // Prevent default newline behavior
-                    sendMessage();
-                }
-            });
-        }
-    });
-
-    const ably = new Ably.Realtime("YOUR_ABLY_API_KEY"); // Replace with a valid API key before deployment
+    const ably = new Ably.Realtime("mGqA8g.tKm8cg:BXet5NQMtxfr8k8I4Ls0MEzeQxmsQHihc80xDsYd-Ko");
     const channel = ably.channels.get("chat-room");
 
     let mutedUsers = {}; // Stores globally muted users
@@ -71,10 +59,7 @@
     }
 
     function sendMessage() {
-        const messageInput = document.getElementById("messageInput");
-        if (!messageInput) return;
-
-        const messageText = messageInput.value.trim();
+        const messageInput = document.getElementById("messageInput").value.trim();
         const email = sessionStorage.getItem("userEmail");
         const username = sessionStorage.getItem("username");
 
@@ -90,11 +75,128 @@
         }
 
         // **Handle mute/unmute commands**
-        if (messageText.startsWith("/mute")) {
-            handleMuteCommand(messageText);
+        if (messageInput.startsWith("/mute")) {
+            handleMuteCommand(messageInput);
             return;
         }
-        if (messageText.startsWith("/unmute")) {
-            handleUnmuteCommand(messageText);
+        if (messageInput.startsWith("/unmute")) {
+            handleUnmuteCommand(messageInput);
             return;
         }
+
+        // **Send message**
+        channel.publish("message", { text: messageInput, user: email, username: username });
+        document.getElementById("messageInput").value = "";
+    }
+
+    function handleMuteCommand(message) {
+        const email = sessionStorage.getItem("userEmail");
+        if (!email) return;
+
+        // **Only Mods, Devs, and Head Dev can mute**
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+            alert("You do not have permission to mute users.");
+            return;
+        }
+
+        const messageParts = message.split(" ");
+        if (messageParts.length < 2) {
+            alert("Usage: /mute <email>");
+            return;
+        }
+
+        const emailToMute = messageParts[1];
+
+        if (!emailToMute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        mutedUsers[emailToMute] = true; // Mark user as muted
+        alert(`${emailToMute} has been muted.`);
+        channel.publish("mute", { user: emailToMute }); // Notify everyone in chat
+    }
+
+    function handleUnmuteCommand(message) {
+        const email = sessionStorage.getItem("userEmail");
+        if (!email) return;
+
+        // **Only Mods, Devs, and Head Dev can unmute**
+        if (!modEmails.includes(email) && !devEmails.includes(email)) {
+            alert("You do not have permission to unmute users.");
+            return;
+        }
+
+        const messageParts = message.split(" ");
+        if (messageParts.length < 2) {
+            alert("Usage: /unmute <email>");
+            return;
+        }
+
+        const emailToUnmute = messageParts[1];
+
+        if (!emailToUnmute.includes("@")) {
+            alert("Invalid email format.");
+            return;
+        }
+
+        delete mutedUsers[emailToUnmute]; // Remove user from mute list
+        alert(`${emailToUnmute} has been unmuted.`);
+        channel.publish("unmute", { user: emailToUnmute }); // Notify everyone
+    }
+
+    function loadMessages() {
+        channel.subscribe("message", (message) => {
+            const data = message.data;
+            const chatBox = document.getElementById("chatBox");
+
+            // **Block messages from muted users globally**
+            if (mutedUsers[data.user]) {
+                return; // Hide message for all users
+            }
+
+            const messageElement = document.createElement("p");
+
+            let extraStyle = "";
+            let roleTag = "";
+            let userEmail = data.user;
+
+            // **Handle mod users' display and email visibility**
+            if (modEmails.includes(data.user)) {
+                extraStyle = "color: yellow;";
+                roleTag = " <strong>[MOD]</strong>";
+                if (!devEmails.includes(sessionStorage.getItem("userEmail"))) {
+                    userEmail = "";
+                }
+            } else if (devEmails.includes(data.user)) {
+                extraStyle = "color: red;";
+                roleTag = " <strong>[DEV]</strong>";
+                userEmail = "";
+            }
+
+            messageElement.innerHTML = `<strong style="${extraStyle}">${data.username} (${userEmail})${roleTag}:</strong> ${data.text}`;
+            chatBox.appendChild(messageElement);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        });
+
+        // **Listen for mute/unmute updates**
+        channel.subscribe("mute", (message) => {
+            mutedUsers[message.data.user] = true;
+        });
+
+        channel.subscribe("unmute", (message) => {
+            delete mutedUsers[message.data.user];
+        });
+    }
+
+    window.onload = () => {
+        const email = sessionStorage.getItem("userEmail");
+        if (email) {
+            document.getElementById("authStatus").innerText = `Logged in as ${email}`;
+        }
+        loadMessages();
+    };
+</script>
+
+</body>
+</html>
