--- a/features.html
+++ b/features.html
@@ -52,6 +52,10 @@
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank">Our Partners</a>
         <a href="features.html">Features</a>
+         <div class="sidebar-logo">
+       <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" class="small-logo">
+
+    </div>
     </div>
 
     <div class="content">
