--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,10 @@
         <a href="chat.html">Chat</a>
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank"> Our Partners</a>
+         <div class="sidebar-logo">
+       <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" class="small-logo">
+
+    </div>
     </div>
     
     <div class="content">
