--- a/chat.html
+++ b/chat.html
@@ -18,6 +18,10 @@
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank"> Our Partners</a>
         <a href="features.html" target="_blank">Features</a>
+        <div class="sidebar-logo">
+       <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" class="small-logo">
+
+    </div>
     </div>
     <div class="content">
         <h2>Chat Room</h2>
