--- a/games.html
+++ b/games.html
@@ -28,7 +28,8 @@
         <div id="games-list" class="games-container">
             <!-- Games will be added here -->
         </div>
-        <script>
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
             function openInAboutBlank(url) {
                 let newTab = window.open('about:blank', '_blank');
                 fetch(url)
@@ -71,7 +72,9 @@
                 button.onclick = () => openInAboutBlank(game.url);
                 gamesList.appendChild(button);
             });
-        </script>
+        });
+    </script>
+
     </div>
 </body>
 </html>
