--- a/partners.html
+++ b/partners.html
@@ -33,7 +33,7 @@
         <a href="chat.html">Chat</a>
         <a href="rabbitAI.html" target="_blank">rabbitAI calculator</a>
         <a href="partners.html" target="_blank">Our Partners</a>
-         <a href="features.html" target="_blank">Our Partners</a>
+         <a href="features.html" target="_blank">Features</a>
          <div class="sidebar-logo">
        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" class="small-logo">
 
