--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="chat.html" onclick="navigate(event, 'chat.html')">Chat</a>
         <a href="rabbitAI.html" onclick="navigate(event, 'rabbitAI.html')">RabbitAI Calculator</a>
         <a href="partners.html" onclick="navigate(event, 'partners.html')">Our Partners</a>
-        <a href="features.html">Features</a>
+        <a href="features.html"onclick="navigate(event, 'features.html'>Features</a>
       <div class="sidebar-logo">
        <img src="Evicly, this is boredom hub logo (1).png" alt="Boredom Hub Logo" class="small-logo">
 
