--- a/games.html
+++ b/games.html
@@ -31,6 +31,10 @@
             }
 
             const games = [
+                { name: "Pong", url: "pong/index.html" },
+                { name: "2048", url: "2048/index.html" },
+                { name: "Cluster Rush", url: "Cluster Rush/index.html" },
+                { name: "Eaglercraft", url: "Eaglercraft 1.5.2/eaglercraft.1.5.2.html"},
                 { name: "Survival Race", url: "Survival race/sigma.html"},
                 { name: "Cs 1.6", url: "CS 1.6/sigmacodeboi.html"},
                 { name: "Red vs Blue 2", url: "red v blue/definetlynotcode.html"},
